--- a/style.css
+++ b/style.css
@@ -1,27 +1,20 @@
-body, h1, h2, h3, h4, p, a, ul, li {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  font-weight: normal;
-}
-
-.title-text {
+.title-text-acc {
 	text-align: center;
 	font-size: 40px;
 }
 
-.slide {
+.accordion-wrapper {
 	max-width: 800px;
 	margin: 0 auto;
 	padding-top: 125px;
 }
 
-.accordion {
+.accordion-stuff {
 	display: flex;
 	justify-content: center;
 }
 
-.accordion li {
+.accordion-stuff li {
 	width: 80px;
 	overflow: hidden;
 	padding: 1px 1px 0;
@@ -31,24 +24,24 @@ body, h1, h2, h3, h4, p, a, ul, li {
 	transition: all 1.5s;
 }
 
-.accordion li:hover {
+.accordion-stuff li:hover {
 	width: 500px;
 	box-shadow: 1px 3px 15px #287233;
 	transition: all 1s;
 }
 
-.accordion li:nth-child(4) {
+.accordion-stuff li:nth-child(4) {
 	width: 500px;
 }
 
-.accordion:hover li:nth-child(4) {
+.accordion-stuff:hover li:nth-child(4) {
 	width: 80px;
 }
 
-.accordion li:nth-child(4):hover {
+.accordion-stuff li:nth-child(4):hover {
 	width: 500px;
 }
 
-.slide-img {
+.accordion-img {
 	width: 500px;
 }
