--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 	padding: 1px 1px 0;
 	cursor: pointer;
 	display: block;
-	box-shadow: 1px 3px 15px #7fc7ff;
+	box-shadow: 1px 3px 15px #F0E68C;
 	transition: all 1.5s;
 }
 
